fix on mobile no results page fix on mobile contact box

--- a/css/apt_main_page.css
+++ b/css/apt_main_page.css
@@ -160,14 +160,14 @@ hr {
 .nav_bar_pics{
     width: 100%;
     margin: 0px;
-    height: 350px;
+    height: 200px;
     overflow: hidden;
     font-size:0px;
     /* border:1px dotted #A3B0F8; */
 }
 
 .inner_pics{
-    height: 350px;
+    height: 200px;
     display: inline-block;
     background: #F1F4F6;
     font-size:8px;
@@ -175,7 +175,7 @@ hr {
 }
 
 .inner_pics img{
-    height: 350px;
+    height: 200px;
     width:100%;
     object-fit: cover;
     transition:.2s;
@@ -186,8 +186,8 @@ hr {
 }
 
 .inner_pics img:hover{
-    height: 355px;
-    width:103%;
+    height: 220px;
+    width:101%;
     object-fit: cover;
     -webkit-filter: brightness(105%);
     filter: brightness(105%);
@@ -200,11 +200,11 @@ hr {
     font-size:2.5em;
     line-height:1em;
     letter-spacing:.05em;
-    color:#EED9C6;
+    color:white;
     font-weight:bolder;
     width:33%;
     position:absolute;
-    top:10px;
+    top:0px;
     z-index: 10;
     text-shadow: 0px 0px 6px rgba(0, 0, 50, 0.8);
     overflow:hidden;
@@ -230,7 +230,7 @@ hr {
 }
 
 .navbar{
-    background: rgba(220, 220, 220, .9);
+    background: rgba(222, 222, 222, .7);
     height: 50px;
     width: 100%;
     border-bottom: 1px solid #BEBEBE;
@@ -387,6 +387,7 @@ hr {
     left:230px;
     top:342px;
     cursor:pointer;
+    font-family: 'Oswald', sans-serif;
     font-size:.8em;
 }
 
@@ -421,7 +422,7 @@ hr {
 .most_viewed_window{
     display:none;
     position: absolute;
-    top:350px;
+    top:200px;
     left:calc(50% + 100);
     width:280px;
     background:rgba(255, 255, 255, 0.85);
@@ -520,7 +521,7 @@ hr {
 
 .apt_page_header_pic img{
     width:100%;
-    height:350px;
+    height:200px;
     object-fit:cover;
     object-position: 50% 50%;
     -webkit-filter: blur(3px) opacity(90%); /* Chrome, Safari, Opera */
@@ -531,12 +532,12 @@ hr {
 .nav_prop_name{
     width:calc(100% - 350px);
     position:absolute;
-    top:70px;
+    top:10px;
     left:100px;
     font-family:'Lobster', sans-serif;
     color:#F0E4D5;
-    font-size:6em;
-    line-height:1em;
+    font-size:5.8em;
+    line-height:.9em;
     z-index:200;
     text-shadow:3px 3px 15px rgba(0, 0, 0, 0.9);
 }
@@ -544,17 +545,17 @@ hr {
 .nav_prop_slogan{
     width:100%;
     font-family:'Oswald', sans-serif;
-    margin-top:30px;
+    margin-top:10px;
     color:#F0E4D5;
-    font-size:.35em;
-    line-height:1em;
+    font-size:.3em;
+    line-height:.9em;
     z-index:200;
     text-shadow:3px 3px 15px rgba(0, 0, 0, 0.9);
 }
 
 .special_box{
     width: 250px;
-    height: 349px;
+    height: 200px;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -576,23 +577,23 @@ hr {
 
 .spec_title{
     font-family:'Oswald', sans-serif;
-    font-size: 1.9em;
-    line-height: 1.2em;
+    font-size: 1.4em;
+    line-height: 1em;
     color: #0071C3;
 }
 
 .spec_desc{
     font-family: 'Verdana', sans-serif;
-    font-size: 1.1em;
-    line-height: 1.3em;
+    font-size: .9em;
+    line-height: 1em;
     color: #595959;
     display: block;
     text-align: justify;
 }
 
 .spec_cond{
-    font-size: .75em;
-    line-height: 1.2em;
+    font-size: .7em;
+    line-height: 1em;
     color: #5B5B5B;
     font-family: "Verdana", sans-serif;
 }
@@ -852,6 +853,7 @@ hr {
     font-size: 12px;
     position: relative;
     overflow-x: hidden;
+    height: 450px;
     width: 100%;
     box-sizing: border-box;
     background: #F0F0F0;
